--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/bcrypt": "^5.0.1",
     "@types/uuid": "^9.0.6",
     "@types/webpack-env": "^1.18.3",
+    "aws-sdk": "^2.1483.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "better-console-log-plus": "^1.4.4",
@@ -47,6 +48,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "helmet": "^7.0.0",
     "mysql2": "^3.6.2",
+    "nest-aws-sdk": "^3.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
@@ -60,6 +62,7 @@
     "@nestjs/testing": "^10.2.7",
     "@types/express": "^4.17.20",
     "@types/jest": "29.5.6",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.9",
     "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
