Add auth and jwt sistem

--- a/.env.local
+++ b/.env.local
@@ -24,4 +24,7 @@ AWS_ACCESS_KEY_ID=adefinir
 AWS_SECRET_ACCESS_KEY=adefinir
 AWS_EXPIRATION_TIME_FILE=1200
 
-PASSWORD_USER_DEFAULT="changeme"
+PASSWORD_USER_DEFAULT="test"
+
+JWT_SECRET_KEY="test"
+JWT_SECRET_KEY_REFRESH_TOKEN="test"
